_2009_12_10__16_29_46_ Chi-Hsiu Liang

  * Some stuff about one-dimensional Fourier grid Hamiltonian for hindered rotors.

2009-December-5 Struan Robertson

	* fitting.cpp: Minor tidying of fitting method.

2009-November-29 Struan Robertson

	* fitting.cpp: Rough sketch of multi-dimensional search added.

_2009_11_27__13_16_47_ Chi-Hsiu Liang

  * Resolved a problem in reverse ILT that only the energy of the first product was taken into account. Thanks to Robin Shannon.

2009-November-19 Chris Morley

	* Windows VC9/distribution/NSISScriptToCreateInstaller.nsi:
	the install directory is now added to the front of PATH
	and to the front of MESMER_DIR. To version 0.11
	
	* src/main.cpp:use only the first directory in MESMER_DIR
	
	These changes should allow a second or later installation to work ok.
	If it is uninstalled the earlier version should work again.
	There may be issues with the start menu items needing to be deleted
	manually sometimes (I haven't sorted out exactly when).

_2009_11_19__12_24_19_ Chi-Hsiu Liang

  * Updated video tutorial plan

_2009_11_19__10_23_25_ Chi-Hsiu Liang

  * Make sure imFreq is positive.
  * Mesmer video tutorial plan

_2009_11_18__12_14_08_ Chi-Hsiu Liang

  * Tunneling for bimolecular reactions

_2009_11_17__14_26_41_ Chi-Hsiu Liang

  * Update the manual for shortest integration time of species profile

_2009_11_13__19_32_06_ Chi-Hsiu Liang

  * Update the manual for gridSearch

2009-November-13 Struan Robertson

	* ReactionManager.cpp: Minor correction to the calculation of Chi^2.

_2009_11_13__15_35_43_ Chi-Hsiu Liang

  * Modify the way specifying cemetery state

2009-November-13 Struan Robertson

	* fitting.cpp: Rough sketch of golden section line search added.

_2009_10_27__17_47_36_ Chi-Hsiu Liang

  * Changed the boundary of the shortest integration time of species profile.

_2009_10_16__11_55_04_ Chi-Hsiu Liang

  * Corrected the cemetery state method.

_2009_10_14__16_13_57_ Chi-Hsiu Liang
